# automateImod

./: README.md  calc.py  coms.py  ps_io.py  pyproject.toml  requirements.txt  run.py  setup.py  utils.py
automateImod/: calc.py  coms.py  parallel.py  pio.py  run.py  scratch.py  utils.py
